# converter

./: Makefile.am  configure.ac  redo.sh
converter-0.0.1/: Makefile.am  configure.ac  redo.sh
converter-0.0.1/doc/: Makefile.am  converter.info
converter-0.0.1/include/converter/: converter.h  converter_dep.h  converter_int.h  converter_int.h.bak  converter_int.h.old  old_candl_dependence.h
converter-0.0.1/source/: .osl2scoplib.c.swp  .scoplib2osl.c.swp  converter.c  converter_int.c  old_candl_dependence.c  osl2scoplib.c  scoplib2osl.c  scoplib2osl.c.bak
converter-0.0.1/tests/c_files/: dummy.c  matmul_dummy.c  matmul_dummy_fail.c
converter-0.0.1/tests/scoplib/: ax-do.scop  gemver.scop  iir_4_64.scop  swim.scop
include/converter/: converter.h  macros.h.in
source/: converter_int.c
tests/c_files/: clan_autopragma.c
tests/clan/: dummy.scop  matmul_dummy.scop  matmul_dummy_fail.scop
tests/scoplib/: gauss.scop  matmul.scop
